--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,14 @@
-<h1> Nosso mundinho Feliz</h1>
+<table>
+    <tr>
+      <th>name</th>
+      <th>price</th>
+      <th>quantity</th>
+    </tr>
+    {{#products}}
+    <tr>
+      <td>{{name}}</td>
+      <td>{{price}}</td>
+      <td>{{quantity}}</td>
+    </tr>
+    {{/products}}
+</table>
